UY-1415 Policy documents support in UpMan