@@ -14,6 +14,7 @@ import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 import org.hamcrest.text.IsEmptyString;
 import org.junit.Before;
@@ -36,9 +37,11 @@ import pl.edu.icm.unity.exceptions.EngineException;
 import pl.edu.icm.unity.stdext.identity.EmailIdentity;
 import pl.edu.icm.unity.stdext.utils.EntityNameMetadataProvider;
 import pl.edu.icm.unity.store.api.GroupDAO;
+import pl.edu.icm.unity.store.api.PolicyDocumentDAO;
 import pl.edu.icm.unity.store.api.generic.EnquiryFormDB;
 import pl.edu.icm.unity.store.api.generic.MessageTemplateDB;
 import pl.edu.icm.unity.store.api.generic.RegistrationFormDB;
+import pl.edu.icm.unity.store.types.StoredPolicyDocument;
 import pl.edu.icm.unity.types.I18nMessage;
 import pl.edu.icm.unity.types.I18nString;
 import pl.edu.icm.unity.types.basic.AttributeType;
@@ -46,6 +49,8 @@ import pl.edu.icm.unity.types.basic.Group;
 import pl.edu.icm.unity.types.basic.GroupDelegationConfiguration;
 import pl.edu.icm.unity.types.basic.MessageTemplate;
 import pl.edu.icm.unity.types.basic.MessageType;
+import pl.edu.icm.unity.types.policyAgreement.PolicyAgreementConfiguration;
+import pl.edu.icm.unity.types.policyAgreement.PolicyAgreementPresentationType;
 import pl.edu.icm.unity.types.registration.BaseFormNotifications;
 import pl.edu.icm.unity.types.registration.EnquiryForm;
 import pl.edu.icm.unity.types.registration.EnquiryFormBuilder;
@@ -69,12 +74,15 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 
 	@Mock
 	private RegistrationFormDB mockRegistrationFormDB;
+	
+	@Mock
+	private PolicyDocumentDAO mockPolicyDocumentDB;
 
 	@Before
 	public void init()
 	{
 		generator = new GroupDelegationConfigGeneratorImpl(mockMsg, mockRegistrationFormDB, mockMsgTemplateDB,
-				mockEnqFormDB, mockAttrHelper, mockGroupDB);
+				mockEnqFormDB, mockAttrHelper, mockGroupDB, mockPolicyDocumentDB);
 	}
 
 	@Test
@@ -84,15 +92,18 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		when(mockRegistrationFormDB.getAll()).thenReturn(List.of());
 		when(mockAttrHelper.getAttributeTypeWithSingeltonMetadata(eq(EntityNameMetadataProvider.NAME)))
 				.thenReturn(new AttributeType("name", null));
+		when(mockPolicyDocumentDB.getByKey(1L)).thenReturn(new StoredPolicyDocument(1L, "Policy"));
 		addGroup("/A", "a", true, true);
 		addTemplates();
 		RegistrationForm form = generator.generateProjectRegistrationForm("/A", "https://logo.url",
-				Arrays.asList("at1"));
+				Arrays.asList("at1"), List.of(1L));
 		assertThat(form.getName(), is("aregSuffix"));
 		assertThat(form.getAttributeParams().get(0).getAttributeType(), is("name"));
 		assertThat(form.getAttributeParams().get(1).getAttributeType(), is("at1"));
 		assertThat(form.getGroupParams().get(0).getGroupPath(), is("/A/?*/**"));
 		assertThat(form.getIdentityParams().get(0).getIdentityType(), is(EmailIdentity.ID));
+		assertThat(form.getPolicyAgreements().get(0).documentsIdsToAccept.get(0), is(1L));
+
 		assertAutomationProfile(form.getTranslationProfile(), "/A");
 		assertNotificationTemplates(form.getNotificationsConfiguration());
 	}
@@ -102,14 +113,17 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 	{
 		when(mockMsg.getMessage(eq("FormGenerator.joinEnquiryNameSuffix"))).thenReturn("enSuffix");
 		when(mockEnqFormDB.getAll()).thenReturn(List.of());
+		when(mockPolicyDocumentDB.getByKey(1L)).thenReturn(new StoredPolicyDocument(1L, "Policy"));
 		addGroup("/A", "a", true, true);
 		addTemplates();
-		EnquiryForm form = generator.generateProjectJoinEnquiryForm("/A", "https://logo.url");
+		EnquiryForm form = generator.generateProjectJoinEnquiryForm("/A", "https://logo.url", List.of(1L));
 		assertThat(form.getName(), is("aenSuffix"));
 		assertThat(form.getTargetCondition(), is("!(groups contains '/A')"));
 		assertThat(form.getGroupParams().get(0).getGroupPath(), is("/A/?*/**"));
+		assertThat(form.getPolicyAgreements().get(0).documentsIdsToAccept.get(0), is(1L));
 		assertAutomationProfile(form.getTranslationProfile(), "/A");
 		assertNotificationTemplates(form.getNotificationsConfiguration());
+		assertPolicies(form.getPolicyAgreements(),  List.of(1L, 2L));
 	}
 
 	@Test
@@ -132,10 +146,11 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		when(mockRegistrationFormDB.getAll()).thenReturn(List.of());
 		when(mockAttrHelper.getAttributeTypeWithSingeltonMetadata(eq(EntityNameMetadataProvider.NAME)))
 				.thenReturn(new AttributeType("name", null));
+		when(mockPolicyDocumentDB.getByKey(1L)).thenReturn(new StoredPolicyDocument(1L, "Policy"));
 		addGroup("/A", "a", true, true);
 		addTemplates();
 		RegistrationForm form = generator.generateProjectRegistrationForm("/A", "https://logo.url",
-				Arrays.asList("at1"));
+				Arrays.asList("at1"), List.of(1L));
 		when(mockRegistrationFormDB.get(eq("aregSuffix"))).thenReturn(form);
 		addGroup("/A/B", "ab", true, true);
 		addTemplates();
@@ -148,6 +163,7 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		assertThat(sform.getIdentityParams().get(0).getIdentityType(), is(EmailIdentity.ID));
 		assertAutomationProfile(sform.getTranslationProfile(), "/A");
 		assertNotificationTemplates(sform.getNotificationsConfiguration());
+		assertPolicies(sform.getPolicyAgreements(), List.of(1L, 2L));
 	}
 
 	@Test
@@ -155,9 +171,10 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 	{
 		when(mockMsg.getMessage(eq("FormGenerator.joinEnquiryNameSuffix"))).thenReturn("enSuffix");
 		when(mockEnqFormDB.getAll()).thenReturn(List.of());
+		when(mockPolicyDocumentDB.getByKey(1L)).thenReturn(new StoredPolicyDocument(1L, "Policy"));
 		addGroup("/A", "a", true, true);
 		addTemplates();
-		EnquiryForm form = generator.generateProjectJoinEnquiryForm("/A", "https://logo.url");
+		EnquiryForm form = generator.generateProjectJoinEnquiryForm("/A", "https://logo.url", List.of(1L));
 		when(mockEnqFormDB.get(eq("aenSuffix"))).thenReturn(form);
 		addGroup("/A/B", "ab", true, true);
 		addTemplates();
@@ -168,6 +185,8 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		assertThat(sform.getGroupParams().get(0).getGroupPath(), is("/A/B/?*/**"));
 		assertAutomationProfile(sform.getTranslationProfile(), "/A/B");
 		assertNotificationTemplates(sform.getNotificationsConfiguration());
+		assertPolicies(sform.getPolicyAgreements(), List.of(1L, 2L));
+
 	}
 
 	@Test
@@ -195,13 +214,15 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		when(mockRegistrationFormDB.getAll()).thenReturn(List.of());
 		when(mockAttrHelper.getAttributeTypeWithSingeltonMetadata(eq(EntityNameMetadataProvider.NAME)))
 				.thenReturn(new AttributeType("name", null));
+		when(mockPolicyDocumentDB.getByKey(1L)).thenReturn(new StoredPolicyDocument(1L, "Policy"));
+		when(mockPolicyDocumentDB.getAll()).thenReturn(List.of(new StoredPolicyDocument(1L, "policy")));
 		addGroup("/A", "a", true, true);
 		addTemplates();
 		RegistrationForm form = generator.generateProjectRegistrationForm("/A", "https://logo.url",
-				Arrays.asList("at1"));
+				Arrays.asList("at1"), List.of(1L));
 		when(mockRegistrationFormDB.get(eq("aregSuffix"))).thenReturn(form);
 
-		List<String> errors = generator.validateRegistrationForm("/A", "aregSuffix");
+		List<String> errors = generator.validateRegistrationForm("/A", "aregSuffix", Set.of(1L));
 		assertThat(errors.size(), is(0));
 	}
 
@@ -209,12 +230,15 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 	public void shouldValidateJoinEnquiryForm() throws EngineException
 	{
 		when(mockEnqFormDB.getAll()).thenReturn(List.of());
+		when(mockPolicyDocumentDB.getByKey(1L)).thenReturn(new StoredPolicyDocument(1L, "Policy"));
+		when(mockPolicyDocumentDB.getAll()).thenReturn(List.of(new StoredPolicyDocument(1L, "policy")));
+
 		addGroup("/A", "a", true, true);
 		addTemplates();
-		EnquiryForm form = generator.generateProjectJoinEnquiryForm("/A", "https://logo.url");
+		EnquiryForm form = generator.generateProjectJoinEnquiryForm("/A", "https://logo.url", List.of(1L));
 		when(mockEnqFormDB.get(eq("aenSuffix"))).thenReturn(form);
 
-		List<String> errors = generator.validateJoinEnquiryForm("/A", "aenSuffix");
+		List<String> errors = generator.validateJoinEnquiryForm("/A", "aenSuffix", Set.of(1L));
 		assertThat(errors.size(), is(0));
 	}
 
@@ -237,10 +261,14 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 	{
 		RegistrationForm form = new RegistrationFormBuilder().withName("aregSuffix")
 				.withDefaultCredentialRequirement(EngineInitialization.DEFAULT_CREDENTIAL_REQUIREMENT)
+				.withPolicyAgreements(List.of(new PolicyAgreementConfiguration(List.of(1L),
+						PolicyAgreementPresentationType.CHECKBOX_NOTSELECTED, new I18nString())))
 				.build();
 		when(mockRegistrationFormDB.get(eq("aregSuffix"))).thenReturn(form);
+		when(mockPolicyDocumentDB.getAll()).thenReturn(List.of(new StoredPolicyDocument(1L, "policy")));
 		when(mockMsg.getMessage(anyString())).thenAnswer(i -> i.getArguments()[0]);
-		List<String> errors = generator.validateRegistrationForm("/A", "aregSuffix");
+		when(mockMsg.getMessage(anyString(), anyString())).thenAnswer(i -> i.getArguments()[0]);
+		List<String> errors = generator.validateRegistrationForm("/A", "aregSuffix", Set.of(2L));
 		assertThat(errors.get(0), is("FormGenerator.noEmailIdentity"));
 		assertThat(errors.get(1), is("FormGenerator.noAutoAccept"));
 		assertThat(errors.get(2), is("FormGenerator.noAutoGroupAdd"));
@@ -248,6 +276,9 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		assertThat(errors.get(4), is("FormGenerator.noAcceptTemplate"));
 		assertThat(errors.get(5), is("FormGenerator.noRejectTemplate"));
 		assertThat(errors.get(6), is("FormGenerator.noUpdateTemplate"));
+		assertThat(errors.get(7), is("FormGenerator.missingFormPolicies"));
+		assertThat(errors.get(8), is("FormGenerator.additionalFormPolicies"));
+
 	}
 
 	@Test
@@ -255,16 +286,23 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 	{
 		EnquiryForm form = new EnquiryFormBuilder().withName("aenSuffix").withTargetGroups(new String[] { "/" })
 				.withType(EnquiryForm.EnquiryType.STICKY).withTargetCondition("!(groups contains '/B')")
+				.withPolicyAgreements(List.of(new PolicyAgreementConfiguration(List.of(1L),
+						PolicyAgreementPresentationType.CHECKBOX_NOTSELECTED, new I18nString())))
 				.build();
 		when(mockEnqFormDB.get(eq("aenSuffix"))).thenReturn(form);
 		when(mockMsg.getMessage(anyString())).thenAnswer(i -> i.getArguments()[0]);
-		List<String> errors = generator.validateJoinEnquiryForm("/A", "aenSuffix");
+		when(mockMsg.getMessage(anyString(), anyString())).thenAnswer(i -> i.getArguments()[0]);
+		when(mockPolicyDocumentDB.getAll()).thenReturn(List.of(new StoredPolicyDocument(1L, "policy")));
+
+		List<String> errors = generator.validateJoinEnquiryForm("/A", "aenSuffix", Set.of(2L));
 		assertThat(errors.get(0), is("FormGenerator.noAutoAccept"));
 		assertThat(errors.get(1), is("FormGenerator.noAutoGroupAdd"));
 		assertThat(errors.get(2), is("FormGenerator.noInvitationTemplate"));
 		assertThat(errors.get(3), is("FormGenerator.noAcceptTemplate"));
 		assertThat(errors.get(4), is("FormGenerator.noRejectTemplate"));
 		assertThat(errors.get(5), is("FormGenerator.noUpdateTemplate"));
+		assertThat(errors.get(6), is("FormGenerator.missingFormPolicies"));
+		assertThat(errors.get(7), is("FormGenerator.additionalFormPolicies"));
 	}
 
 	@Test
@@ -284,7 +322,7 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		Group group = new Group(path);
 		group.setDisplayedName(new I18nString(name));
 		group.setDelegationConfiguration(new GroupDelegationConfiguration(groupWithEnabledDelegation,
-				enableSubproject, null, null, null, null, List.of()));
+				enableSubproject, null, null, null, null, List.of(), List.of()));
 		when(mockGroupDB.get(eq(path))).thenReturn(group);
 	}
 
@@ -326,5 +364,12 @@ public class TestGroupDelegationConfigGenerator extends TestProjectBase
 		assertThat(notConfig.getAcceptedTemplate(), not(IsEmptyString.emptyOrNullString()));
 		assertThat(notConfig.getRejectedTemplate(), not(IsEmptyString.emptyOrNullString()));
 		assertThat(notConfig.getUpdatedTemplate(), not(IsEmptyString.emptyOrNullString()));
+	}
+	
+	private void assertPolicies(List<PolicyAgreementConfiguration> policyAgreements, List<Long> selected) {
+		for (PolicyAgreementConfiguration policyAgreementConfiguration : policyAgreements) {
+			assertThat(policyAgreementConfiguration.documentsIdsToAccept.get(0),
+					is(selected.get(policyAgreements.indexOf(policyAgreementConfiguration))));
+		}
 	}
 }
